--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer components {
+	.underline-row {
+		@apply gap-y-1 max-w-[60ch] [&>li:not(.no-row)]:relative [&>li:not(.no-row)]:after:absolute [&>li:not(.no-row)]:after:left-0 [&>li:not(.no-row)]:after:-bottom-0.5 [&>li:not(.no-row)]:after:w-full [&>li:not(.no-row)]:after:h-[0.025rem] [&>li:not(.no-row)]:after:bg-neutral/50 [&>li:not(.no-row)]:min-h-[1.5rem];
+	}
 }
